LFCS-2 Added comment for starting the DataBase UI.